--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,5 +2,9 @@
     width: 100%;
     height: 100%;
     overflow-Y: scroll;
+
     // min-width: 1040px;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
