--- a/client/src/components/render_item/CommentItem.scss
+++ b/client/src/components/render_item/CommentItem.scss
@@ -15,13 +15,15 @@
         // position: absolute;
         // height: 500%;
         & .avatar {
-            width: 60px;
-            height: 60px;
+            margin-left: 5px;
+            margin-top: 5px;
+            width: 55px;
+            height: 55px;
             border-radius: 50%;
             overflow: hidden;
 
             img {
-                width: 60px;
+                width: 55px;
             }
         }
 
