--- a/client/src/components/order/orderContent.scss
+++ b/client/src/components/order/orderContent.scss
@@ -1,18 +1,265 @@
+@use "../../colors";
+
 .wrapordercontent {
     width: 1257px;
     height: 100vh;
     display: flex;
     margin: auto;
-
-    .orderoption {
-        width: 19.4%;
-        height: 100px;
-        background-color: aqua;
-    }
+    margin-top: 15px;
 
     .ordercontent {
         flex: 1;
         height: 100%;
-        background-color: black;
+        background-color: #fff;
+
+        .ordercontent-header {
+            padding: 10px 0px;
+            display: flex;
+            margin: 15px 20px 0 20px;
+            border-bottom: 1px solid #0000001a;
+            color: #00000070;
+
+            span {
+                &:nth-child(1) {
+                    width: 51.7%;
+                }
+
+                &:nth-child(2) {
+                    width: 14.8%;
+                }
+
+                &:nth-child(3) {
+                    width: 16%;
+                }
+
+                &:nth-child(4) {
+                    width: 10.4%;
+                }
+            }
+        }
+
+
+        .ordercontent-item {
+            margin-top: 30px;
+            // display: flex;
+            // align-items: center;
+            padding: 0 20px;
+            height: max-content;
+
+            .ordercontent-item1 {
+                display: flex;
+
+                .product {
+                    display: flex;
+                    width: 48%;
+
+                    .wrapimgproduct {
+                        width: 100px;
+                        height: 100px;
+                        margin-right: 15px;
+
+                        img {
+                            object-fit: contain;
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+
+                    .nameproduct {
+                        overflow: hidden;
+                        flex: 1;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 3;
+                    }
+                }
+
+                .price {
+                    display: flex;
+                    width: 15%;
+                    justify-content: center;
+
+                    .oldprice {
+                        margin-right: 10px;
+                    }
+                }
+
+                .wrapquantity {
+                    width: 15%;
+                    display: flex;
+                    justify-content: center;
+
+                    .quantity {
+                        width: 104px;
+                        height: 33px;
+                        position: relative;
+                        border: 1px solid rgba(0, 0, 0, 0.4);
+
+                        & button {
+                            background-color: #fff;
+                            font-size: 22px;
+                            outline: none;
+                            border: none;
+                            height: 100%;
+                            width: 30px;
+                            color: rgba(0, 0, 0, 0.7);
+                            position: absolute;
+                            cursor: pointer;
+                        }
+
+                        & button:last-child {
+                            margin-left: 70px;
+                        }
+
+                        & input {
+                            border: none;
+                            outline: none;
+                            text-align: center;
+                            margin-left: 30px;
+                            position: absolute;
+                            font-size: 19px;
+                            border-left: 1px solid rgba(0, 0, 0, 0.4);
+                            border-right: 1px solid rgba(0, 0, 0, 0.4);
+                            width: 40px;
+                            height: 100%;
+
+                            &::-webkit-outer-spin-button,
+                            &::-webkit-inner-spin-button {
+                                -webkit-appearance: none;
+                                margin: 0;
+                            }
+                        }
+                    }
+                }
+
+                .totalprice {
+                    width: 15%;
+                    display: flex;
+                    justify-content: center;
+                }
+
+                .action {
+                    flex: 1;
+                    display: flex;
+                    justify-content: center;
+                }
+            }
+
+            .ordercontent-item2 {
+                width: 100%;
+                display: flex;
+                margin-top: 30px;
+                justify-content: space-between;
+
+                .relatedproducts {
+                    padding: 10px 0;
+                    color: colors.$color-red;
+                }
+
+                .btndetail {
+                    padding: 10px 20px;
+                    background-color: colors.$color-red;
+                    color: #fff;
+                    border-radius: 3px;
+                }
+            }
+        }
+    }
+
+
+    .orderoption {
+        padding-left: 12px;
+        padding-right: 12px;
+        margin-right: 15px;
+        width: 20%;
+        height: max-content;
+        background-color: #fff;
+        border-radius: 3px;
+
+        .titleorderoption {
+            font-size: 18px;
+            padding: 12px 16px;
+            border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+            margin-top: 0;
+
+            svg {
+                margin-right: 5px;
+                font-size: 16px;
+            }
+        }
+
+        .listorderoption {
+            padding: 0 0 8px 0;
+            overflow: hidden;
+
+            .orderoption-item {
+                list-style: none;
+                position: relative;
+                padding: 8px 8px;
+                display: flex;
+                align-items: center;
+                position: relative;
+
+                svg {
+                    position: absolute;
+                    color: colors.$color-red;
+                    transform: translateX(-35px);
+                }
+
+                .nameorderoption {
+                    text-decoration: none;
+                    font-size: 16px;
+                    padding: 8px 16px;
+                    position: relative;
+                    display: block;
+                    transition: right linear 0.1s;
+                    right: 0;
+                    transition: transform ease 0.2s;
+
+                    &:hover {
+                        transform: translateX(5px);
+                        color: colors.$color-red;
+                        cursor: pointer;
+                    }
+                }
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    border-top: 2px solid rgb(228, 223, 223);
+                    top: 0;
+                    left: 16px;
+                    right: 16px;
+                }
+            }
+
+            .listorderoptionActive {
+                color: colors.$color-red;
+
+                svg {
+                    position: absolute;
+                    color: colors.$color-red;
+                    animation: select ease 0.2s forwards;
+                }
+            }
+
+            .orderoption-item:first-child {
+                &::after {
+                    content: '';
+                    border: none;
+                }
+            }
+        }
+    }
+
+}
+
+@keyframes select {
+    from {
+        transform: translateX(-35px);
+    }
+
+    to {
+        transform: translateX(0);
     }
 }
