--- a/client/src/components/order/orderContent.scss
+++ b/client/src/components/order/orderContent.scss
@@ -10,30 +10,89 @@
     .ordercontent {
         flex: 1;
         height: 100%;
+        position: relative;
         background-color: #fff;
+
+        .wrapselectbox {
+            width: 50px;
+            display: flex;
+            align-items: center;
+
+            .selectbox {
+                height: 16px;
+                position: relative;
+                width: 16px;
+                border: 1px solid #0000004a;
+                display: flex;
+                border-radius: 3px;
+
+                svg {
+                    display: none;
+                }
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+
+                }
+            }
+
+            .active {
+                height: 16px;
+                width: 16px;
+                display: flex;
+                border-radius: 3px;
+                background-color: colors.$color-red;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+
+                }
+
+                svg {
+                    display: block;
+                    color: #fff;
+                }
+            }
+        }
 
         .ordercontent-header {
             padding: 10px 0px;
             display: flex;
             margin: 15px 20px 0 20px;
             border-bottom: 1px solid #0000001a;
-            color: #00000070;
 
             span {
-                &:nth-child(1) {
-                    width: 51.7%;
-                }
-
                 &:nth-child(2) {
-                    width: 14.8%;
+                    width: 42%;
+                    color: #00000070;
                 }
 
                 &:nth-child(3) {
-                    width: 16%;
+                    width: 22%;
+                    text-align: center;
+                    color: #00000070;
                 }
 
                 &:nth-child(4) {
-                    width: 10.4%;
+                    width: 15%;
+                    text-align: center;
+                    color: #00000070;
+                }
+
+                &:nth-child(5) {
+                    flex: 1;
+                    text-align: center;
+                    color: #00000070;
                 }
             }
         }
@@ -51,11 +110,11 @@
 
                 .product {
                     display: flex;
-                    width: 48%;
+                    width: 42%;
 
                     .wrapimgproduct {
-                        width: 100px;
-                        height: 100px;
+                        width: 80px;
+                        height: 80px;
                         margin-right: 15px;
 
                         img {
@@ -76,8 +135,9 @@
 
                 .price {
                     display: flex;
-                    width: 15%;
+                    width: 22%;
                     justify-content: center;
+                    align-items: center;
 
                     .oldprice {
                         margin-right: 10px;
@@ -87,6 +147,7 @@
                 .wrapquantity {
                     width: 15%;
                     display: flex;
+                    align-items: center;
                     justify-content: center;
 
                     .quantity {
@@ -133,7 +194,8 @@
                 }
 
                 .totalprice {
-                    width: 15%;
+                    flex: 1;
+                    align-items: center;
                     display: flex;
                     justify-content: center;
                 }
@@ -150,6 +212,8 @@
                 display: flex;
                 margin-top: 30px;
                 justify-content: space-between;
+                padding-bottom: 15px;
+                border-bottom: 1px solid #00000024;
 
                 .relatedproducts {
                     padding: 10px 0;
@@ -163,6 +227,13 @@
                     border-radius: 3px;
                 }
             }
+        }
+
+        .pay {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
         }
     }
 
