update order page

--- a/client/src/components/order/orderContent.scss
+++ b/client/src/components/order/orderContent.scss
@@ -220,6 +220,7 @@
                 .relatedproducts {
                     padding: 10px 0;
                     color: colors.$color-red;
+                    cursor: pointer;
                 }
 
                 .btndetail {
