--- a/client/src/components/order/orderContent.scss
+++ b/client/src/components/order/orderContent.scss
@@ -45,6 +45,7 @@
                 height: 16px;
                 width: 16px;
                 display: flex;
+                position: relative;
                 border-radius: 3px;
                 background-color: colors.$color-red;
 
