--- a/client/src/Page/Products/ProductPage.scss
+++ b/client/src/Page/Products/ProductPage.scss
@@ -180,6 +180,55 @@
         }
     }
 
+    &-rating {
+        margin-top: 20px;
+        background-color: white;
+        width: 30%;
+        height: 200px;
+        border-radius: 5px;
+
+        & .title {
+            height: 50px;
+            text-align: center;
+            font-size: 28px;
+            padding-top: 5px;
+            font-weight: bold;
+        }
+
+        & .stars {
+            height: 100px;
+            font-size: 48px;
+            // border: 1px solid red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        & .submit {
+            width: 100%;
+            height: 50px;
+            position: relative;
+
+            & button {
+                position: absolute;
+                top: -25%;
+                left: 50%;
+                transform: translate(-50%, 0%);
+                font-size: 16px;
+                margin-top: 15px;
+                background-color: colors.$color-red;
+                color: white;
+                outline: none;
+                border: none;
+                border-radius: 5px;
+                height: 40px;
+                width: 100px;
+                cursor: pointer;
+                font-weight: bold;
+            }
+        }
+    }
+
     &-comments {
         background-color: white;
         // overflow: scroll;
