Update rating on Client

--- a/client/src/Page/Products/UserRating.scss
+++ b/client/src/Page/Products/UserRating.scss
@@ -27,7 +27,11 @@
         justify-content: center;
         align-items: center;
 
-        & svg {
+        & span.true {
+            color: colors.$color-red;
+        }
+
+        svg {
             cursor: pointer;
         }
     }
