Optimize cache order

--- a/client/src/components/search_content/SearchContent.scss
+++ b/client/src/components/search_content/SearchContent.scss
@@ -262,7 +262,7 @@
 
             .product-search-page-item {
                 display: inline-flex;
-                justify-content: space-between;
+                // justify-content: space-between;
                 margin-bottom: 30px;
                 width: 100%;
             }
