--- a/client/src/components/order/orderContent.scss
+++ b/client/src/components/order/orderContent.scss
@@ -305,7 +305,7 @@
                     }
                 }
 
-                .buy {
+                .buy,.delete {
                     padding: 10px 20px;
                     background-color: colors.$color-red;
                     color: #fff;
