--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,10 +1,5 @@
 .App {
     width: 100%;
     height: 100%;
-    overflow-Y: scroll;
-
-    // min-width: 1040px;
-    &::-webkit-scrollbar {
-        display: none;
-    }
+    // overflow-Y: scroll;
 }
