--- a/client/src/Page/Auth/DetailsUser/EditProfile.scss
+++ b/client/src/Page/Auth/DetailsUser/EditProfile.scss
@@ -15,9 +15,9 @@
         .popup-container {
             width: 500px;
             background-color: #fff;
-            position: relative;
+            position: absolute;
             padding: 10px 20px;
-            top: 50%;
+            top: 60%;
             left: 50%;
             transform: translate(-50%, -50%);
             border-radius: 5px;
