--- a/client/src/Page/search/search.scss
+++ b/client/src/Page/search/search.scss
@@ -1,7 +1,7 @@
 .wrapsearch-content {
     width: 100%;
     height: 100vh;
-    overflow-y: scroll;
+    // overflow-y: scroll;
 
     .search_content {
         display: flex;
