--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,16 +11,17 @@
 body {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
-}
-
-#root {
-    width: 100%;
-    height: 100%;
+    overflow: scroll;
     background-color: colors.$color-background;
-    overflow: hidden;
-
 }
+
+// #root {
+//     width: 100%;
+//     height: 100%;
+//     background-color: colors.$color-background;
+//     overflow: hidden;
+
+// }
 
 a {
     // color: transparent;
