--- a/client/src/Page/Auth/DetailsUser/EditProfile.scss
+++ b/client/src/Page/Auth/DetailsUser/EditProfile.scss
@@ -35,6 +35,10 @@
                     align-items: center;
                     padding: 10px 0;
 
+                    .option {
+                        margin-left: 12px;
+                    }
+
                     span {
                         width: 130px;
                     }
