--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,7 +11,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    overflow: scroll;
+    // overflow: scroll;
     background-color: colors.$color-background;
 }
 
