--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,7 +11,8 @@
 body {
     width: 100vw;
     height: 100vh;
-    // overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     background-color: colors.$color-background;
 }
 
