--- a/client/src/components/order/PopupSuccess.scss
+++ b/client/src/components/order/PopupSuccess.scss
@@ -23,7 +23,7 @@
             .imgbox {
                 text-align: center;
 
-                .img {
+                img {
                     width: 112px;
                     margin-top: 40px;
                 }
@@ -35,6 +35,10 @@
                 text-align: center;
                 font-size: 30px;
                 margin: 23px 0;
+            }
+
+            .title.error {
+                color: red;
             }
 
             .para {
@@ -61,6 +65,10 @@
                     text-align: center;
                     letter-spacing: 0.05em;
                     cursor: pointer;
+                }
+
+                button.error {
+                    background: red;
                 }
             }
         }
