--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -292,7 +292,7 @@
                     width: 25px;
                     height: 25px;
                     border-radius: 50px;
-                    border: 1px solid;
+                    // border: 1px solid;
                     background-color: red;
                     color: white;
                     display: flex;
